fixed footer and some spacing issues

--- a/less/sky/navigation.less
+++ b/less/sky/navigation.less
@@ -79,7 +79,7 @@
 }
 
 #posts {
-	width: 75%;
+	width: 65%;
 	margin: 2% 0%;
 }
 
@@ -107,31 +107,13 @@
 #copyright {
 	margin-left: 40%;
 	margin-top: 25px;
+	position: absolute;
 }
 
 #footer {
 	background: url("../../images/sky/usernav_bg.png");
 	height: 70px;
-	position: absolute;
 	width:100%;
-	bottom: 0px;
-	
-	img {
-		position: absolute;
-		bottom: 15px;
-	}
-}
-
-#black {
-	right: 50px;
-}
-
-#dark_blue {
-	right: 100px;
-}
-
-#light_blue {
-	right: 150px;
 }
 
 .upcoming_events_title {
